# mcp-server

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cs_ai_bridge_mcp/: __init__.py  app.py  config.py  llm_client.py  odoo_client.py  schema_redis.py  schema_validation.py  server.py  tools.py
