[project]
name = "cs-ai-bridge-fastmcp"
version = "0.1.0"
description = "FastMCP server for CS AI Bridge API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
cs-ai-bridge-mcp = "cs_ai_bridge_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
